--- a/kadai_005/html/kadai_005.html
+++ b/kadai_005/html/kadai_005.html
@@ -11,5 +11,6 @@
     現在は社会人のフットサルチームに所属して毎週フットサルを楽しんでいます。
   </p>
   <img src="../images/sample.jpg" alt="サッカーボール">
+  <a href="https://x.com/samuraijuku">私のプロフィールはこちら</a>
 </body>
 </html>
