--- a/kadai_005/html/kadai_005.html
+++ b/kadai_005/html/kadai_005.html
@@ -10,7 +10,7 @@
   <p>私は小学1年生からサッカーを始めました。<br>
     現在は社会人のフットサルチームに所属して毎週フットサルを楽しんでいます。
   </p>
-  <img src="../images/sample.jpg" alt="サッカーボール">
+  <img src="../images/sample.jpg" alt="サッカーボール"><br>
   <a href="https://x.com/samuraijuku">私のプロフィールはこちら</a>
 </body>
 </html>
