--- a/kadai_008/kadai_008.html
+++ b/kadai_008/kadai_008.html
@@ -14,6 +14,7 @@
       <a href="https://www.sejuku.net/">社会</a>
       <a href="https://www.sejuku.net/">スポーツ</a>
       <a href="https://www.sejuku.net/">テクノロジー</a>
+    </nav>
   </header>
   <main>
     <article>
