--- a/kadai_mdn_css/kadai_022.html
+++ b/kadai_mdn_css/kadai_022.html
@@ -2,14 +2,24 @@
 <html>
 
 <head>
-    <!-- 外部CSSファイルをリンク -->
-    <link rel="stylesheet" href="style.css">
+    <style>
+        div {
+            position: absolute;
+            left: 50px;
+            top: 50px;
+            width: 150px;
+            height: 150px;
+            background-color: skyblue;
+            transform: rotate(20deg);
+        }
+    </style>
 </head>
 
 <body>
     <div>
         回転します
     </div>
+
 </body>
 
 </html>
